some admin ui for https://github.com/mitsbits/Ubik/issues/11

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/LayOuts.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/LayOuts.cshtml
@@ -13,5 +13,6 @@
         var rows = Model as IEnumerable<DeviceViewModel>;
         Html.RenderPartial("~/Areas/Backoffice/Views/Devices/Partials/DeviceList.cshtml", rows);
     }
+    AddBackofficeBottom("devices/layouts");
 }
 
