--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceList.cshtml
@@ -1,1 +1,61 @@
-﻿
+﻿@using Ubik.Web.Components.AntiCorruption.ViewModels
+@model IEnumerable<DeviceViewModel>
+<aside class="right-side">
+
+    <section class="content-header">
+        <h1>
+            @PageContent.Current.Title
+            <small>@PageContent.Current.Subtitle</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Implement</a></li>
+            <li><a href="#">the</a></li>
+            <li class="active">breadcrump</li>
+        </ol>
+    </section>
+
+    <section class="content">
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="box box-primary">
+                    <div class="box-header">
+                        <h3 class="box-title">
+                            Lay Outs
+                        </h3>
+                        <div class="pull-right">
+                            <a href="@Url.Action("LAyouts", "Devices", new { id = 0})" class="btn btn-primary">Create a new Lay Out</a>
+                        </div>
+                    </div>
+                    <div class="box-body table-responsive table-condensed table-hover">
+                        <table class="table table-hover table-condensed" id="devices-table">
+                            <thead>
+                                <tr>
+                                    <th style="width: 40px">#</th>
+                                    <th>Name</th>
+                                    <th></th>
+
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @for (var i = 0; i < Model.Count(); i++)
+                                {
+                                    var device = Model.ToArray()[i];
+                                    <tr>
+                                        <td>
+                                            <span class="text-info">   @((i + 1).ToString("000"))</span>
+                                        </td>
+                                        <td>@Html.ActionLink(device.FriendlyName, "Layouts", "Devices", new { id = device.Id, area = "Backoffice" }, null)</td>
+                                        <td>
+                                            <a href="@Url.Action("DeleteLayout", "Devices", new {id = device.Id})" class="btn btn-warning btn-sm">Delete</a>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+    </section>
+</aside>
