--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
@@ -1,12 +1,20 @@
 ﻿@using Ubik.Web.Components
 @using Ubik.Web.Components.AntiCorruption.ViewModels
 @model SectionViewModel
+@{
+    var title = (Model.SectionId == 0)? "New Section" : Model.FriendlyName;
+}
+
 <div class="panel box box-primary">
     <div class="box-header">
         <h3 class="box-title">
             <a data-toggle="collapse" href="#new-section-form" class="collapsed btn btn-primary">
-                New Section
+                @title
             </a>
+            @if (Model.SectionId != 0)
+            {
+                @Html.ActionLink("New Section", "LayOuts", "Devices", new { id = Model.DeviceId, section = 0 }, new { @class = "btn btn-primary" })
+            }
         </h3>
     </div>
     @using (Html.BeginForm("CreateSection", "Devices", FormMethod.Post, new { role = "form", }))
