--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionSlotDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionSlotDetail.cshtml
@@ -2,6 +2,8 @@
 @model SlotViewModel
 @{
     var title = (Model.Ordinal == 0 || Model.Module == null) ? "New Slot" : Model.Module.FriendlyName;
+    var moduleOptions = new List<SelectListItem>(new[] { new SelectListItem() { Group = new SelectListGroup() { Name = "" }, Text = "", Value = "" } });
+    moduleOptions.AddRange(Model.AvailableModules.Select(x => new SelectListItem() { Text = x.FriendlyName, Value = string.Concat(x.ModuleGroup, x.FriendlyName), Group = new SelectListGroup() { Name = x.ModuleGroup } }));
 }
 <div class="panel box box-primary">
     <div class="box-header">
@@ -39,6 +41,15 @@
                         @Html.ValidationMessageFor(m => m.Ordinal, "", new { @class = "" })
                     </div>
                 </div>
+                
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">@Html.LabelFor(m => m.Module)</span>
+                        @Html.DropDownListFor(x=>x.Module, moduleOptions, new{ @class="form-control"})                 
+                        @Html.ValidationMessageFor(m => m.Ordinal, "", new { @class = "" })
+                    </div>
+                </div>
+                
 
             </div>
             <div class="box-footer clearfix">
