--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
@@ -7,13 +7,13 @@
 
 <div class="panel box box-primary">
     <div class="box-header">
-        <h3 class="box-title">
+        <h3 class="box-title col-md-12">
             <a data-toggle="collapse" href="#new-section-form" class="collapsed btn btn-primary">
                 @title
             </a>
             @if (Model.SectionId != 0)
             {
-                @Html.ActionLink("New Section", "LayOuts", "Devices", new { id = Model.DeviceId, section = 0 }, new { @class = "btn btn-primary" })
+                @Html.ActionLink("New Section", "LayOuts", "Devices", new { id = Model.DeviceId, section = 0 }, new { @class = "btn btn-primary pull-right" })
             }
         </h3>
     </div>
