--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
@@ -17,7 +17,7 @@
             }
         </h3>
     </div>
-    @using (Html.BeginForm("CreateSection", "Devices", FormMethod.Post, new { role = "form", }))
+    @using (Html.BeginForm("UpdateSection", "Devices", FormMethod.Post, new { role = "form", }))
     {
         @Html.AntiForgeryToken()
         <div class="panel-collapse collapse" id="new-section-form">
