sterted modeling taxonomies - https://github.com/mitsbits/Ubik/issues/26

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceDetails.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceDetails.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Ubik.Web.Components
 @using Ubik.Web.Components.AntiCorruption.ViewModels
-@model DeviceViewModel
+@using Ubik.Web.Components.AntiCorruption.ViewModels.Devices
+@model Ubik.Web.Components.AntiCorruption.ViewModels.Devices.DeviceViewModel
 @{
     var selectedSection = (Request.QueryString["section"] != null) ? int.Parse(Request.QueryString["section"]) : 0;
     var selectedSlotOrdinal = (Request.QueryString["slot"] != null) ? int.Parse(Request.QueryString["slot"]) : 0;
