--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceList.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Components.AntiCorruption.ViewModels
-@model IEnumerable<DeviceViewModel>
+@model IEnumerable<Ubik.Web.Components.AntiCorruption.ViewModels.Devices.DeviceViewModel>
 <aside class="right-side">
 
     <section class="content-header">
