--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ubik.Web.Components
 @using Ubik.Web.Components.AntiCorruption.ViewModels
-@model SectionViewModel
+@model Ubik.Web.Components.AntiCorruption.ViewModels.Devices.SectionViewModel
 @{
     var title = (Model.SectionId == 0)? "New Section" : Model.FriendlyName;
 }
