--- a/Ubik.UI.MVC/Areas/Backoffice/Views/ErrorLogs/Partials/ErrorLogList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/ErrorLogs/Partials/ErrorLogList.cshtml
@@ -23,7 +23,7 @@
                     <input type="checkbox" id="row-selector-@i" data-id="@errorlog.Id" class="selector">
                 </td>
                 <td>@errorlog.ErrorDatetTimeUtc.ToLocalTime().ToString("d/M/yy")</td>
-                <td>@errorlog.ErrorDatetTimeUtc.ToLocalTime().ToString("HH:mm:ss")</td>
+                <td>@errorlog.ErrorDatetTimeUtc.ToLocalTime().ToString("HH:mm")</td>
                 <td>@errorlog.Host</td>
                 <td>@errorlog.ErrorCode</td>
 
