--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/LayOuts.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/LayOuts.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Ubik.Web.Components.AntiCorruption.ViewModels
+@using Ubik.Web.Components.AntiCorruption.ViewModels.Devices
 
 @{
     var isDetail = false;
