--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionSlotDetail.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Devices/Partials/DeviceSectionSlotDetail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Ubik.Web.Components.AntiCorruption.ViewModels
-@model SlotViewModel
+@model Ubik.Web.Components.AntiCorruption.ViewModels.Devices.SlotViewModel
 @{
     var title = (Model.Ordinal == 0 || Model.Module == null) ? "New Slot" : Model.Module.FriendlyName;
     var moduleOptions = new List<SelectListItem>(new[] { new SelectListItem() { Group = new SelectListGroup() { Name = "" }, Text = "", Value = "" } });
