minor ui fix for backoffice left menu

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Navigation/LeftMenu.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Navigation/LeftMenu.cshtml
@@ -69,7 +69,7 @@
         <li id="@grp.Key" class="treeview">
             <a href="#">
                 <i class="@grp.IconCssClass"></i>
-                <span>User Administration</span>
+                <span>@grp.Display</span>
                 <i class="fa fa-angle-left pull-right"></i>
             </a>
             <ul class="treeview-menu" id="@grp.Key">
