view models for https://github.com/mitsbits/Ubik/issues/26

--- a/Ubik.UI.MVC/Areas/Backoffice/Views/ErrorLogs/Index.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/ErrorLogs/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.UI.WebControls
-@using Ubik.Web.Infra
+﻿@using Ubik.Web.Infra
 @using Ubik.Infra.DataManagement
 @model PagedResult<ErrorLog>
 @{
