--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Taxonomies/Partials/DivisionList.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Taxonomies/Partials/DivisionList.cshtml
@@ -1,2 +1,51 @@
 ﻿
-<h1>List</h1>
+@using Ubik.Web.Components.AntiCorruption.ViewModels.Taxonomies
+@using Ubik.Infra.DataManagement
+@model PagedResult<DivisionViewModel>
+@{
+    var _model = Model.Data.ToArray();
+
+}
+<aside class="right-side">
+
+    <section class="content-header">
+        <h1>
+            @PageContent.Current.Title
+            <small>@PageContent.Current.Subtitle</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Implement</a></li>
+            <li><a href="#">the</a></li>
+            <li class="active">breadcrump</li>
+        </ol>
+    </section>
+
+    <section class="content">
+        <div class="row">
+
+            <div class="col-md-12">
+                <div class="box box-primary">
+  
+
+                    <div class="box-header">
+                        <h3 class="box-title">
+                            @PageContent.Current.Title
+                        </h3>
+                        <div class="pull-right">
+                            <a href="@Url.Action("divisions", "taxonomies", new  {id=default(int)})" class="btn btn-primary">Create a new Division</a>
+                        </div>
+                    </div>
+
+                    <div class=" box-body table-responsive table-condensed table-hover">
+                        @Html.Partial("Partials/DivisionListGrid", _model)
+                    </div>
+                    <div class="box-footer clearfix">
+                        <div class="pull-right dataTables_paginate">
+                            @Html.HtmlPager(Model, p => Url.Action(ViewContext.RouteData.Values["Action"].ToString(), ViewContext.RouteData.Values["Controller"].ToString(), new { p }), ViewContext.HttpContext.Request.QueryString, Pagination.PaginationInfo.DefaultPager)
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</aside>
