Added admin lte to backoffice layout - https://github.com/mitsbits/Ubik/issues/30

--- a/Ubik.UI.Backoffice/Areas/Backoffice/Views/Home/Index.cshtml
+++ b/Ubik.UI.Backoffice/Areas/Backoffice/Views/Home/Index.cshtml
@@ -10,4 +10,4 @@
     <h1>Index</h1>
 </div>
 
-title = @PageContent.Current.Title from back office
+title = @*@PageContent.Current.Title from back office*@
