--- a/Ubik.UI.Backoffice/Areas/Backoffice/Views/_ViewImports.cshtml
+++ b/Ubik.UI.Backoffice/Areas/Backoffice/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@inherits Ubik.Web.Client.Backoffice.BackofficePage<dynamic>
+﻿@*@inherits Ubik.Web.Client.Backoffice.BackofficePage*@
 
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
