--- a/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
+++ b/Ubik.UI.MVC/Areas/Backoffice/Views/Shared/_Layout.cshtml
@@ -1,13 +1,14 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>@PageContent.Current.Title</title>
+    <title>@this.</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     @Styles.Render("~/Areas/Backoffice/Content/css/bootstrap")
     @Styles.Render("~/Areas/Backoffice/Content/css/AdminLTE")
-    <link href="@Url.Content("~/Areas/Backoffice/Content/fonts/font-awesome/css/font-awesome.min.css")" rel="stylesheet" type="text/css" />
+    //<link href="@Url.Content("~/Areas/Backoffice/Content/fonts/font-awesome/css/font-awesome.min.css")" rel="stylesheet" type="text/css" />
     @Styles.Render("~/Areas/Backoffice/Content/css/bootstrap-slider")
     @Styles.Render("~/Areas/Backoffice/Content/css/bootstrap-wysihtml5")
     @Styles.Render("~/Areas/Backoffice/Content/css/colorpicker")
