added recursive component for backoffice menu - https://github.com/mitsbits/Ubik/issues/30

--- a/Ubik.UI.Backoffice/Areas/Backoffice/Views/Shared/Components/MainMenu/DemoMenu.cshtml
+++ b/Ubik.UI.Backoffice/Areas/Backoffice/Views/Shared/Components/MainMenu/DemoMenu.cshtml
@@ -1,12 +1,11 @@
-﻿<ul class="sidebar-menu">
-    <li class="header">MAIN NAVIGATION</li>
+﻿
     <li class="treeview">
         <a href="#">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-            <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+            <li><a href="lib/admin-lte/pages/lib/admin-lte/pages/index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+            <li><a href="lib/admin-lte/pages/lib/admin-lte/pages/index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
         </ul>
     </li>
     <li class="treeview">
@@ -16,14 +15,14 @@
             <span class="label label-primary pull-right">4</span>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-            <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-            <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-            <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+            <li><a href="lib/admin-lte/pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+            <li><a href="lib/admin-lte/pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
+            <li><a href="lib/admin-lte/pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
+            <li><a href="lib/admin-lte/pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
         </ul>
     </li>
     <li>
-        <a href="../widgets.html">
+        <a href="lib/admin-lte/pages/widgets.html">
             <i class="fa fa-th"></i> <span>Widgets</span>
             <small class="label pull-right bg-green">Hot</small>
         </a>
@@ -35,10 +34,10 @@
             <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-            <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-            <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-            <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+            <li><a href="lib/admin-lte/pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+            <li><a href="lib/admin-lte/pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
+            <li><a href="lib/admin-lte/pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
+            <li><a href="lib/admin-lte/pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
         </ul>
     </li>
     <li class="treeview">
@@ -48,12 +47,12 @@
             <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
-            <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-            <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-            <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-            <li><a href="../UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-            <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+            <li><a href="lib/admin-lte/pages/UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
+            <li><a href="lib/admin-lte/pages/UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
+            <li><a href="lib/admin-lte/pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
+            <li><a href="lib/admin-lte/pages/UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
+            <li><a href="lib/admin-lte/pages/UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
+            <li><a href="lib/admin-lte/pages/UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
         </ul>
     </li>
     <li class="treeview">
@@ -62,9 +61,9 @@
             <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-            <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-            <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+            <li><a href="lib/admin-lte/pages/forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
+            <li><a href="lib/admin-lte/pages/forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+            <li><a href="lib/admin-lte/pages/forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
         </ul>
     </li>
     <li class="treeview">
@@ -73,18 +72,18 @@
             <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-            <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-            <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+            <li><a href="lib/admin-lte/pages/tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
+            <li><a href="lib/admin-lte/pages/tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
         </ul>
     </li>
     <li>
-        <a href="../calendar.html">
+        <a href="lib/admin-lte/pages/calendar.html">
             <i class="fa fa-calendar"></i> <span>Calendar</span>
             <small class="label pull-right bg-red">3</small>
         </a>
     </li>
     <li>
-        <a href="../mailbox/mailbox.html">
+        <a href="lib/admin-lte/pages/mailbox/mailbox.html">
             <i class="fa fa-envelope"></i> <span>Mailbox</span>
             <small class="label pull-right bg-yellow">12</small>
         </a>
@@ -129,9 +128,8 @@
             <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
         </ul>
     </li>
-    <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+    <li><a href="lib/admin-lte/pages/lib/admin-lte/pages/documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
     <li class="header">LABELS</li>
     <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
     <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
     <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
-</ul>
