injectiong page content as a service in views - https://github.com/mitsbits/Ubik/issues/30

--- a/Ubik.UI.Backoffice/Areas/Backoffice/Views/_ViewImports.cshtml
+++ b/Ubik.UI.Backoffice/Areas/Backoffice/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@*@inherits Ubik.Web.Client.Backoffice.BackofficePage*@
+﻿@using Ubik.Web.Basis.Contracts
+@inject IContentAccessor PageContent
 
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+
