--- a/Ubik.UI.Backoffice/Areas/Backoffice/Views/Shared/_Layout.cshtml
+++ b/Ubik.UI.Backoffice/Areas/Backoffice/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>@*@PageContent.Current.Title*@</title>
+    <title>@PageContent.Current.Title</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -253,7 +253,7 @@
                 </div>
                 <!-- /.box -->
             </section>
-            <!-- /.content -->
+            <!-- /.content -->  
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
